--- a/ToDoLocal/index.html
+++ b/ToDoLocal/index.html
@@ -18,6 +18,11 @@
     </section>
 
     <section>
+  <label for="search">Buscar Tarefa:</label>
+  <input type="text" id="search" placeholder="Digite para filtrar..." />
+</section>
+
+    <section>
       <h2>Minhas Tarefas</h2>
       <ul id="todo-list"></ul>
     </section>
